Refactor continuous trader logic in api-server
